# gcp-ovpn-portal

./:  MANIFEST.in  .coveragerc  .env.example  .flake8  .gitignore  Makefile  README.md  build.py  codecov.yml  pyproject.toml  pytest.ini  requirements.txt  run.py
app/: __init__.py  vpn.py
app/auth/: routes.py
app/main/: routes.py
app/static/css/: style.css
app/static/js/: drawer.js  main.js  tabs.js
app/templates/: index.html
config/: cloudbuild.yaml
config/scripts/: bump_version.py
ovpn_portal/: run.py  version.py  wsgi.py
ovpn_portal/app/: __init__.py  config.py  middleware.py  vpn.py
ovpn_portal/app/main/: __init__.py  routes.py
ovpn_portal/app/static/js/: drawer.js
ovpn_portal/app/templates/: index.html
ovpn_portal/static/css/: style.css
ovpn_portal/static/js/: drawer.js  tabs.js
src/ovpn_portal/: __init__.py
src/ovpn_portal/cli/: main.py
src/ovpn_portal/cli/commands/: dev.py  serve.py  setup.py  version.py
src/ovpn_portal/core/: __init__.py  auth.py  cli.py  config.py  logging.py  version.py  vpn.py
src/ovpn_portal/core/templates/: client.ovpn
src/ovpn_portal/static/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/ovpn_portal/static/src/: App.jsx  index.css
src/ovpn_portal/static/src/components/AuthStatus/: index.jsx
src/ovpn_portal/static/src/components/CommandBlock/: index.jsx
src/ovpn_portal/static/src/components/ConnectionDiagnostics/: index.jsx
src/ovpn_portal/static/src/components/DownloadConfig/: index.jsx
src/ovpn_portal/static/src/components/DownloadLink/: index.jsx
src/ovpn_portal/static/src/components/Drawer/: ConnectionDiagnostics.jsx  NetworkMetrics.jsx  index.jsx
src/ovpn_portal/static/src/components/DrawerFooter/: index.jsx
src/ovpn_portal/static/src/components/InstructionCard/: index.jsx
src/ovpn_portal/static/src/components/Instructions/: index.jsx
src/ovpn_portal/static/src/components/Logo/: index.jsx
src/ovpn_portal/static/src/components/NetworkMetrics/: index.jsx
src/ovpn_portal/static/src/components/StatusIndicator/: index.jsx
src/ovpn_portal/static/src/components/VPNStatus/: index.jsx
src/ovpn_portal/static/src/context/: AuthContext.jsx
src/ovpn_portal/static/src/hooks/: useGoogleAuth.js  useServerStatus.js  useVpnStatus.js
src/ovpn_portal/static/src/services/: api.js
src/ovpn_portal/web/: app.py  middleware.py
src/ovpn_portal/web/routes/: auth.py  health.py  ui.py  vpn.py
tests/: conftest.py  test_auth.py  test_routes.py  test_run.py  test_vpn.py  test_wsgi.py
tests/core/: test_cli.py  test_config.py  test_core_auth.py  test_core_vpn.py  test_init.py  test_logging.py
tests/web/: test_app.py  test_middleware.py
tests/web/routes/: test_auth.py  test_health.py  test_ui.py  test_vpn.py
