[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gcp-ovpn-portal"
version = "0.3.2"
description = "A secure OpenVPN authentication portal with Google OAuth2"
authors = [ "Abigail Ranson <abby@abbyranson.com>",]
readme = "README.md"
homepage = "https://github.com/ranson21/ovpn-client-web"
repository = "https://github.com/ranson21/ovpn-client-web"
documentation = "https://github.com/ranson21/ovpn-client-web#readme"
keywords = [ "vpn", "openvpn", "oauth", "google-auth", "flask",]
license = "MIT"
include = [ "src/ovpn_portal/static/dist/**/*", "src/ovpn_portal/core/templates/*.ovpn",]
classifiers = [ "Development Status :: 4 - Beta", "Environment :: Web Environment", "Framework :: Flask", "Intended Audience :: System Administrators", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "Topic :: System :: Systems Administration", "Topic :: Security",]
[[tool.poetry.packages]]
include = "ovpn_portal"
from = "src"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
known_third_party = [ "flask", "google",]

[tool.poetry.dependencies]
click = "^8.0.0"
python = ">=3.8.1,<4.0"
Flask = "^2.0.0"
flask-cors = "^4.0.0"
google-auth = "^2.0.0"
requests = "^2.31.0"
python-dotenv = "^0.19.0"
gunicorn = "^21.0.0"
tomli = "^2.0.1"
honcho = "^1.1.0"

[tool.poetry.scripts]
ovpn-portal = "ovpn_portal.cli.main:cli"
dev = "ovpn_portal.cli.commands.dev:run_dev"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.1.0"
black = "^22.0.0"
flake8 = "^7.1.1"
isort = "^5.0.0"
codecov = "^2.1.13"
autoflake = "^2.3.1"
tomlkit = "^0.13.2"
toml = "^0.10.2"
